Changelog
=========
1.2-dev - (unreleased)
----------------------
* Change: Added cache metadata to images [ghicaale #3667]
* BUG FIX: flexibility questions are now saved on imported, were ignored before #3857 [vincisas]

1.1 - (2010-11-10)
------------------
* Re-release egg since previous version 1.0 was incomplete/broken.[demarant]

1.0 (2010-11-10)
----------------
* BUG FIX: moved config variables from tests/base.py to config.py in order not
  to @setup test env outside testing context [voineali]
* BUG FIX #3809: removed forced floating left on any image tag in assessment. [demarant]

* Added feeds for SENSE countries. [vincisas]
* Added SOER portal type vocabulary to be used in faceted [vincisas]
* Change number of sentences shown for country introduction in soercountry_view [vincisas]
* Added migrationstep for recreating scales after PIL 1.1.7 upgrade #3819 [vincisas]
* Show larger figure in popup and link to fullscreen #3805 [vincisas]

0.9 - (2010-11-05)
------------------

* CHANGE: on country view we convert country introduction to text and show only the first 50 sentences.
this will make the text more plain but the right formating will be shown when user press read more.
fixes #3774
* BUG FIX: unicode error with custom question in Flexibility report, fixes #3817
* added method for seting up all sense feeds

0.8 - (2010-10-25)
------------------

*  description should be generated in soer namespace
   use dc namespace as fallback if the soer description is missing [vincisas]
*  keyMessage css fix [vincisas]
*  new map service [vincisas]
*  soertopic view [vincisas]
*  SOERKeyFact and SOERMessage types [thuliper]
*  default keywords for report content [vincisas]
*  migration step for pre 0.5 images/datasource links [vincisas]


0.7 - (2010-10-14)
------------------

* sub headings and labels for SOER C documents #3685 [vincisas]
* soer topic view for countries #3685 [vincisas]
* keymessage harmonization #3760 [vincisas]